; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_hub.c_usbd_set_power_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_hub.c_usbd_set_power_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32, i64 }

@USB_POWER_MODE_ON = common dso_local global i64 0, align 8
@USB_POWER_MODE_OFF = common dso_local global i64 0, align 8
@USB_POWER_MODE_SAVE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usbd_set_power_mode(%struct.usb_device* %0, i64 %1) #0 {
  %3 = alloca %struct.usb_device*, align 8
  %4 = alloca i64, align 8
  store %struct.usb_device* %0, %struct.usb_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @USB_POWER_MODE_ON, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @USB_POWER_MODE_OFF, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i64, i64* @USB_POWER_MODE_SAVE, align 8
  store i64 %13, i64* %4, align 8
  br label %14

14:                                               ; preds = %12, %8, %2
  %15 = load %struct.usb_device*, %struct.usb_device** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i64 @usbd_filter_power_mode(%struct.usb_device* %15, i64 %16)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load %struct.usb_device*, %struct.usb_device** %3, align 8
  %20 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %19, i32 0, i32 1
  store i64 %18, i64* %20, align 8
  %21 = load %struct.usb_device*, %struct.usb_device** %3, align 8
  %22 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @usb_needs_explore(i32 %23, i32 0)
  ret void
}

declare dso_local i64 @usbd_filter_power_mode(%struct.usb_device*, i64) #1

declare dso_local i32 @usb_needs_explore(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
